--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto saepe asperiores magni ipsum repudiandae illo cumque unde dolore, dolor ullam temporibus sunt corporis aut aliquam architecto quos minima ex consequuntur.</p>
 
 
-      </section>
+    <!-->  </section><!-->
   <div class="social">
           <div class="readcomments">
           <i class="fa fa-comment-o"></i>
@@ -68,18 +68,57 @@
         <i class="fa fa-share-square"></i>
         <a href="#">Share this Post</a>
         </div>
-  </div>
-      <section class="sidebar">
-        <div class="author-social-info">
-          <span class="medium-author"></span>
-          <span class="annie">Anne Marie</span>
-          <span class="twitter">Twitter</span>
-          <span class="facebook">Facebook</span>
-          <span class="instagram">Instagram</span>
 
-        </div>
-      </section>
-      <footer>
+
+  </div>
+</section>
+      <!--><div id="sidebar"><!-->
+        <div class="author-social-info">
+          <span class="author-headshot"></span>
+          <h4 class="anne-marie-sidebar">Anne Marie</h4>
+          <ul class="social-links">
+        <li>
+          <a class="twitter" href="#">Twitter</a>
+        </li>
+        <li>
+          <a class="facebook" href="#">Facebook</a>
+        </li>
+          <li>
+          <a class="instagram" href="#">Instagram</a>
+        </li>
+        <span class="side-image"></span>
+        <a class="about">About this Ad</a>
+        </ul>
+
+          <h4 class="sidebar-section">side bar section heading</h4>
+          <p class=sidebar-paragraph>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <div class="clear-fixing"></div>
+
+      </div>
+      <!--><div id="bottom-nav"><!-->
+
+      <div class="most-popular">
+        <span class="popular">Most Popular Posts</span>
+
+
+
+
+
+      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  <!--><Footer><!-->
+      <footer id="footer">
         <div class="iron-yard"> <img class="iron-yard-logo" src="images/theironyard.png"></div>
       </footer>
     </div>
